# wtg-weather

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  README.md  REBUILD_PLAN.md  docker-compose.dev.yml  docker-compose.yml
api/: .dockerignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  pyproject.toml
api/migrations/: env.py
api/migrations/versions/: 0001_initial.py  0002_core_schema.py  0003_onboarding_state.py
api/src/wtg_api/: config.py  db.py  deps.py  main.py
api/src/wtg_api/jobs/: __init__.py  alerts_weekly.py
api/src/wtg_api/middleware/: __init__.py  cors.py  session.py
api/src/wtg_api/models/: __init__.py  alert.py  client.py  favourite.py  membership.py  organization.py  trip.py  user.py  webhook_event.py
api/src/wtg_api/routers/: auth.py  onboarding.py  orgs.py  paddle.py  paddle_checkout.py  public.py  tiles.py  trips.py  users.py
api/src/wtg_api/schemas/: __init__.py
api/src/wtg_api/services/: alerts.py  email.py  entitlements.py  observability.py  paddle.py  sessions.py  signing.py
api/tests/: conftest.py  test_alerts_service.py  test_auth.py  test_health.py  test_observability.py  test_onboarding.py  test_orgs.py  test_paddle_checkout.py  test_paddle_signature.py  test_paddle_webhook.py  test_signing.py  test_tiles.py  test_trips.py
pipeline/: CLAUDE.md  README.md  pyproject.toml
pipeline/demo/: index.html
pipeline/docs/: aggregation-qa-2026.md
pipeline/src/wtg_pipeline/: cli.py  config.py  pipeline_runner.py
pipeline/src/wtg_pipeline/processing/: aggregate.py  country_rules.py  percentiles.py  scoring.py  sunshine.py
pipeline/src/wtg_pipeline/sources/: era5.py  geoboundaries.py  iso3_countries.json
pipeline/src/wtg_pipeline/sources/advisories/: __init__.py  australia.py  base.py  canada.py  germany.py  netherlands.py  uk_fcdo.py  us_state.py
pipeline/src/wtg_pipeline/sources/advisories/mappings/: README.md  australia_countries.json  canada_countries.json  germany_countries.json  netherlands_iso3.json  uk_fcdo_countries.json  us_state_countries.json
pipeline/src/wtg_pipeline/tiles/: build_geojson.py  pmtiles.py  tippecanoe.py
pipeline/tests/: conftest.py  test_advisory_base.py  test_build_geojson.py  test_cli.py  test_cli_download.py  test_cli_process.py  test_country_rules.py  test_era5.py  test_geoboundaries.py  test_scoring.py  test_scraper_australia.py  test_scraper_canada.py  test_scraper_germany.py  test_scraper_netherlands.py  test_scraper_uk_fcdo.py  test_scraper_us_state.py  test_sunshine.py  test_tippecanoe.py
pipeline/tests/fixtures/advisories/: australia.json  canada.html  canada_mexico.html  germany.json  netherlands.json  us_state.html  us_state_mexico.html
pipeline/tests/fixtures/advisories/uk_fcdo/: afghanistan.html  egypt.html  france.html  index.html  japan.html  turkey.html  ukraine.html
(+230 files in other folders)
