[project]
name = "wtg-pipeline"
version = "0.0.1"
description = "Where to Go for Great Weather — data pipeline"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "typer>=0.12.0",
]

[project.scripts]
wtg = "wtg_pipeline.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wtg_pipeline"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py312"
