[project]
name = "wtg-pipeline"
version = "0.0.1"
description = "Where to Go for Great Weather — data pipeline"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "typer>=0.12.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "cdsapi>=0.7.0",
    "python-dateutil>=2.9",
    "numpy>=2.0",
    "pandas>=2.2",
    "pyarrow>=17.0",
    "xarray>=2024.6",
    "netcdf4>=1.7",
    "geopandas>=1.0",
    "shapely>=2.0",
    "rioxarray>=0.17",
    "rasterio>=1.3",
    "exactextract>=0.2.0",
    "curl-cffi>=0.7.0",
]

[project.scripts]
wtg = "wtg_pipeline.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wtg_pipeline"]

[tool.hatch.build.targets.wheel.force-include]
"src/wtg_pipeline/sources/advisories/mappings" = "wtg_pipeline/sources/advisories/mappings"
"src/wtg_pipeline/sources/iso3_countries.json" = "wtg_pipeline/sources/iso3_countries.json"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "respx>=0.21",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
